--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,13 @@
 <form action="#" method="post">
     <p>Name:</p>
     <p><input type="text" name="name" /></p>
+
+    <input type="radio" id="answerVolume5" name="volume" value=5 checked/>
+    <label for="answerVolume5">高频5000</label><br>
+
+    <input type="radio" id="answerVolume6" name="volume" value=6 />
+    <label for="answerVolume6">高频5000~10000</label><br>
+
     <p><input type="submit" value="submit" /></p>
 </form>
 {% endblock %} 
